# Inkling

./: .env.example  .github-ci-workflow.yml  .gitignore  Dockerfile  README.md  TECH_SUMMARY.md  ai-writing-rescue.bundle  api_server.py  conftest.py  pyproject.toml  quickstart.py  run.sh.template  test_api.py
ai_engine/: __init__.py
ai_engine/core/: __init__.py  content_analyzer.py  content_guard.py  emotion_engine.py  guide_generator.py  llm_provider.py  progress_tracker.py  review_generator.py  session_manager.py  state_machine.py  stuck_classifier.py  training_deck.py
ai_engine/core/handlers/: __init__.py  base.py  complete.py  ending_guide.py  stuck_rescue.py  topic_analysis.py
ai_engine/core/pipeline/: __init__.py  llm_orchestrator.py  security_pipeline.py
ai_engine/prompts/cooldown/: active.md  (+1 more)
app/: main.py
backend/: main.py
backend/app/: main.py
core/: __init__.py  content_guard.py  guide_generator.py  session_manager.py
docs/: COLLABORATION.md
frontend/: enhanced-demo.html  index.html
frontend/css/: style.css
frontend/js/: app.js
frontend/static_legacy/: demo.html
prompts/: system_prompt.md
prompts/levels/: L1.md  L4.md
prompts/modes/: topic_analysis.md
prompts/stuck_types/: detail.md  paragraph.md  plot.md  psychology.md  transition.md
scripts/: api_server.py  demo.py  test_real_api.py
tests/: test_flows.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_api.py  test_use_cases.py
tests/unit/: test_content_guard.py  test_handlers.py  test_session_manager.py  test_state_machine.py  test_stuck_classifier.py
(+34 files in other folders)
